tests/positive/ImportShadow/Main.juvix
module Main;

import Nat open;

type Unit := unit : Unit;

open Unit;

f : Nat := case unit of is-zero := zero;

f2 : Nat :=
  case suc zero of
    | suc is-zero := zero
    | _ := zero;

f3 : Nat → Nat
  | (suc is-zero) := is-zero
  | zero := zero;
