tests/negative/Internal/FunctionPattern.juvix
module FunctionPattern;

type T := A : T;
open T;

f : (T → T) → T
  | A := A;
